--- a/index.html
+++ b/index.html
@@ -3,38 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Simple Webpage</title>
     <link rel="stylesheet" href="style.css">
+    <title>task1</title>
 </head>
 <body>
+    <div class="container">
+        <div class="navbar">
+            <img src="https://cdn-icons-png.flaticon.com/128/195/195145.png" class="logo">
+            <div class="user">
+                <button type="button">Explore</button>
+                <img src="https://cdn-icons-png.flaticon.com/128/12324/12324053.png">
+            </div>
+        </div>
 
-    <div class="A">
-        <nav>
-            <ul>
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">CONTACT</a></li>
-            </ul>
-        </nav>
+        <div class="hero">
+            <div class="info">
+                <h1>DISCOVER</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nihil, aliquid voluptatem repudiandae deserunt totam, fugit aperiam in, aliquam possimus praesentium maxime at ipsum enim. <br> Vero ratione illum voluptatibus recusandae maxime ullam similique, repellendus laboriosam dicta, necessitatibus saepe voluptate inventore?</p>
+                <input type="text" placeholder="Search">
+            </div>
+        </div>
+
+        <div class="slider"></div>
     </div>
 
-    <div class="B">
-        <h2>About Me</h2>
-        <p>Hello, My name is <em>Gudiya Kumari Sharma</em> a B.Tech CSE student from ARKA JAIN UNIVERSITY. 
-            <p>I am a Web Developer.</p>
-        <p>I am currently in my 2nd year, 4th semester and
-         exploring various career options in software field.</p>
-    </div>
-
-    <div class="C">
-        <h2>Contact Me</h2>
-        <p>My Email :-</p>
-        <p><em>yesgudiyacan@gmail.com</em></p>
-    </div>
-
-    <!-- <footer>
-        <p>&copy;2024 My Simple Webpage. All rights reserved.</p>
-    </footer> -->
+       <footer>
+        <p>&copy;2024 Discover. All rights reserved.</p>
+    </footer>
 
 </body>
 </html>
